# MultiAIgent

./: .env.example  .gitignore  README.md  pyproject.toml
src/multiagent/: __init__.py  __main__.py  config.py  errors.py  utils.py
src/multiagent/adapters/: __init__.py  filesystem.py  gemini.py  logging.py  pricing.py  subprocess_tools.py
src/multiagent/cli/: __init__.py  app.py
src/multiagent/domain/: __init__.py  models.py
src/multiagent/services/: __init__.py  artifact_store.py  batch.py  budget.py  candidate_generator.py  evaluator.py  model_router.py  orchestrator.py  planner.py  prompts.py  repo_context.py  repo_mutation.py  reviewer.py  scheduler.py  synthesizer.py  utilization.py  workers.py
tests/: __init__.py  conftest.py  test_artifacts.py  test_budget_utilization.py  test_candidate_generator.py  test_config.py  test_evaluator.py  test_gemini_gateway.py  test_live_smoke.py  test_orchestrator_loop.py  test_repo_mutation.py  test_scheduler.py  test_schema_and_dag.py  test_subprocess_tools.py  test_worker_retry.py
