[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "multiagent-gemini-executor"
version = "0.1.0"
description = "Local-first, artifact-rich multi-agent execution system on Gemini."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Codex" },
]
dependencies = [
  "google-genai>=1.70.0,<2.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "pydantic-settings>=2.11.0,<3.0.0",
  "typer>=0.16.1,<1.0.0",
  "rich>=14.1.0,<15.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "pytest-asyncio>=1.2.0,<2.0.0",
]

[project.scripts]
multiagent = "multiagent.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/multiagent"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
  "live: requires a real GEMINI_API_KEY and hits the live Gemini API",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["multiagent"]
